frontend/test/should_fail/enum_017.grg
using enum_model_010;

rule r {
	pattern {}
	modify {}
}
